--- a/AlphaWallet/Info.plist
+++ b/AlphaWallet/Info.plist
@@ -88,6 +88,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
+	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>$(ALPHAWALLET_PRODUCT_NAME) uses the camera to scan QR codes</string>
 	<key>NSFaceIDUsageDescription</key>
